--- a/src/app/pokemon/search-pokemon/search-pokemon.component.html
+++ b/src/app/pokemon/search-pokemon/search-pokemon.component.html
@@ -6,7 +6,7 @@
           <input
             #searchBox
             (keyup)="search(searchBox.value)"
-            placeholder="Rechercher un pokemon"
+            placeholder="Rechercher un pokemon par nom/types/dégâts/vie ..."
           />
           <div class="collection">
             <a
