--- a/src/app/share/page-not-found/page-not-found.component.html
+++ b/src/app/share/page-not-found/page-not-found.component.html
@@ -1,15 +1,10 @@
-<!-- <div>
-  <h3>404 Error</h3>
-  <h4>Page Not Found</h4>
-
-  <div class="card-action">
-    <a (click)="goBack()">Retour</a>
-  </div>
-</div> -->
 <div class="center">
-  <img src="http://assets.pokemon.com/assets/cms2/img/pokedex/full/035.png" />
+  <img
+    src="http://assets.pokemon.com/assets/cms2/img/pokedex/full/035.png"
+    style="height: 300px; width: 300px"
+  />
   <h1>Hey, cette page n'existe pas !</h1>
-  <a routerLink="/pokemons" class="waves-effect waves-teal btn-flat">
-    Retourner à l' accueil
-  </a>
+  <button routerLink="/pokemons" class="waves-effect waves-teal btn">
+    Accueil
+  </button>
 </div>
